# TraktSkill

./: .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml
references/: command-reference.md  setup-guide.md
trakt_cli/: __main__.py  api.py  cli.py  config.py  output.py
