[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "trakt-cli"
version = "0.1.0"
description = "A command-line interface for Trakt.tv"
readme = "references/command-reference.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
trakt = "trakt_cli.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["trakt_cli*"]
